fix: add spacing between type badges in product list table

--- a/static/css/pages/admin/products-list.css
+++ b/static/css/pages/admin/products-list.css
@@ -554,6 +554,10 @@
   text-align: center;
 }
 
+.col-type .type-badge + .type-badge {
+  margin-top: 4px;
+}
+
 .col-tags {
   width: 200px;
 }
